# freebandlib

./: .gitignore  MANIFEST.in  Makefile  README.md  benchmarks.py  freeband.py  get_benchmark_sample_data.sh  pyproject.toml  requirements.txt  setup.cfg  test_freeband.py  tox.ini  visualize.py
benchmarks/: 0003_interval.json  0005_interval.json  0006_interval.json  bench_equal.py  bench_interval.py  bench_interval_multiply_00.py  bench_interval_multiply_01.py  bench_interval_multiply_02.py  bench_interval_multiply_03.py  bench_interval_multiply_04.py  bench_interval_multiply_05.py  bench_interval_multiply_06.py  bench_interval_multiply_07.py  bench_interval_multiply_08.py  bench_interval_multiply_09.py  bench_interval_multiply_10.py  bench_interval_multiply_11.py  bench_interval_multiply_12.py  bench_interval_multiply_13.py  bench_interval_multiply_14.py  bench_interval_multiply_15.py  bench_interval_multiply_16.py  bench_interval_multiply_17.py  bench_interval_multiply_18.py  bench_interval_multiply_19.py  bench_isomorphism.py  bench_minimal_multiply.py  bench_minimize.py  bench_minword.py  extract_data.py  generate_sample_data.py  requirements.txt
benchmarks/output/: 0001_equal.json  0001_isomorphism.json  0001_minimize.json  (+324 more)
etc/: make-benchmark-files.sh
freebandlib/: __init__.py  digraph.py  equality.py  freeband.py  minword.py  multiply.py  transducer.py  words.py
images/: Makefile  logo.tex
src/: freeband.py  visualize.py
tests/: test_digraph.py  test_equality.py  test_freeband.py  test_minword.py  test_multiply.py  test_transducer.py  test_words.py
(+20 files in other folders)
