[metadata]
name = freebandlib
version = 0.0.1
author = Reinis Cirpons
author_email = rc234@st-andrews.ac.uk
description = Reference implementations of algorithms for free bands
long_description = file: README.md
long_description_content_type = text/markdown
# TODO: add github stuff
# url = 
# project_urls =
classifiers =
    Programming Language :: Python :: 3
    # TODO: Add license
    Operating System :: OS Independent

[options]
package_dir = 
  = freebandlib
packages = find:
python_requires = >=3.9

[options.packages.find]
where = freebandlib
